      - translation in Settings tab, all the options in label format selectbox
      - translation in widget, the default option in selectBox with branches ("-- please choose --")
      - Slovak module translation
      - documentation en, sk, cz
2.0.3 - "One page checkout prestashop" module support, mini fixes, clear code.
2.0.3rc2 - fix on install with debug_mode on
2.1.0 - Widget for selecting branches added
2.1.1 - Bugfixes
2.1.2 - Bugfixes & Code revision
2.1.3 - Customer Name & Surname taken from delivery address instead of the customer themself
2.1.4 - Fixed: Import branches from the feed - changed timeout from default 5 to 30 secs, and try fopen fallback if cUrl fails
	  - Fixed: Display an error message if SOAP is disabled
	  - Deleted unused files and code
	  - Refactored front.js
	  - Added: Generic support framework for third-party OPC modules
	  - Fixed: getListPayments() - compatibility with PS 1.7.7
2.1.5 - Fixed: Unpairing of carriers from address delivery via module.
      - Fixed: Keep pairing of updated carriers with the module
      - Updated: Transport administration - removal of adding carriers on the module side, solved similarly to
        address delivery by pairing existing carriers with the module.
      - Removed: country and language forcing
      - Added: Widget v6 support.
      - Removed: possibility to change order branch (preparation for future upgrade)
      - Added: associated countries to carriers list
      - Updated: CSV export version upgraded to version 6
      - Added: possibility to pair carriers with carriers to external pickup points and to distinguish between
        Packeta pickup points only and all pickup points
      - Fixed: correctly display the name of the carrier identical to the name of the e-shop on the module setting page
      - Fixed: Undefined index: customer_country in DEV mode
      - Added: module version to static files